@@ -8,6 +8,8 @@ Version 1.4.5 - CVS
   - Make SquirrelSpell work with safe_mode enabled, if using PHP >=4.3.0.
     Patch by Ray Ferguson, backported from devel.
   - Add support for Mail-Followup-To header, from devel.
+  - Remove is_readable($data_dir) test in configtest, because SquirrelMail
+    functions fine with stricter permissions.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
